--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
 
 body {
     background-color: var(--cor-de-fundo);
-
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --fonte-principal: "Poppins";
     
 
 
@@ -24,4 +26,3 @@ body {
 
 
 
-    
