--- a/style.css
+++ b/style.css
@@ -8,7 +8,16 @@ body {
     --laranja: #EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";
+    @import url("styles/header.css");
+
+    :root {
+        --cor-de-fundo: #EBECEE;
+        --branco: #FFFFFF;
+    }
     
+    body {
+        background-color: var(--cor-de-fundo);
+    }  
 
 
 
